k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-task-service
  namespace: devsecops
  labels:                     # <-- add this
    app: secure-task-app      # <-- must match ServiceMonitor selector
spec:
  selector:
    app: secure-task-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
    - name: metrics
      port: 8080
      targetPort: 5000
  type: NodePort
